--- a/projects/A320/index.html
+++ b/projects/A320/index.html
@@ -10,7 +10,7 @@
 
 <div class="header">
 	<div class="header-item"><a href="/" class="logo"><h2>Austin Lundeby</h2></a></div>
-	<div class="header-item"><a href="/about.html" class="about"><b>About</b></a></div>
+	<div class="header-item"><a href="/about.html" class="about">About</a></div>
 </div>
 
 <hr />
