--- a/projects/wine-cellar/index.html
+++ b/projects/wine-cellar/index.html
@@ -9,8 +9,8 @@
 <body>
 
 <div class="header">
-	<div class="header-item"><a href="/"><h2>Austin Lundeby</h2></a></div>
-	<div class="header-item"><a href="/about.html"><b>About</b></a></div>
+	<div class="header-item"><a href="/" class="logo"><h2>Austin Lundeby</h2></a></div>
+	<div class="header-item"><a href="/about.html" class="about">About</a></div>
 </div>
 
 <hr />
