Updated cablights formatting

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -16,69 +16,77 @@
 <hr />
 
 
-<div class="projects">
-<div class="project">
+<div class="articles">
 
-<h1>LED Cabinet Lights</h1>
+	<div class="article-one">
+		<h1>LED Cabinet Lights</h1>
 
-<p>Hardware:<br />
-<a href="https://www.particle.io/">Particle Photon</a><br />
-<a href="https://www.adafruit.com/product/1374">AT42QT1010 touch sensor</a><br />
-<a href="https://www.adafruit.com/product/574">Integrated current meter</a></p>
+		<p>Hardware:<br />
+		<a href="https://www.particle.io/">Particle Photon</a><br />
+		<a href="https://www.adafruit.com/product/1374">AT42QT1010 touch sensor</a><br />
+		<a href="https://www.adafruit.com/product/574">Integrated current meter</a></p>
 
-<p>Short press: change to next state in current mode<br />
-Long Press (3+ seconds): change to next mode</p>
+		<p>Short press: change to next state in current mode<br />
+		Long Press (3+ seconds): change to next mode</p>
+	</div>
 
-<p><a href="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif" alt="normal mode" class="align-center" /></a>
-Normal Mode:</p>
-<ul>
-  <li>Off</li>
-  <li>Low - A warm glow for ambient lighting</li>
-  <li>Medium - Useful level for food prep and cleaning</li>
-  <li>High - Maximum light output from the LEDs</li>
-</ul>
+	<div class="article-one">
+		<a href="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif" alt="normal mode" width="100%" /></a>
+		Normal Mode:</p>
+		<ul>
+		<li>Off</li>
+		<li>Low - A warm glow for ambient lighting</li>
+		<li>Medium - Useful level for food prep and cleaning</li>
+	 	<li>High - Maximum light output from the LEDs</li>
+		</ul>
+	</div>
 
-<p><a href="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif" alt="holiday mode" class="align-center" /></a>
-Holiday Mode:</p>
-<ul>
-  <li>New Year’s Day</li>
-  <li>Valentine’s Day</li>
-  <li>Mardi Gras</li>
-  <li>St. Paddy’s Day</li>
-  <li>Easter</li>
-  <li>4th of July</li>
-  <li>Halloween</li>
-  <li>Thanksgiving</li>
-  <li>Christmas</li>
-</ul>
+	<div class="article-one"> 
+		<p><a href="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif" alt="holiday mode" width="100%" /></a>
+		Holiday Mode:</p>
+		<ul>
+		<li>New Year’s Day</li>
+		<li>Valentine’s Day</li>
+		<li>Mardi Gras</li>
+		<li>St. Paddy’s Day</li>
+		<li>Easter</li>
+		<li>4th of July</li>
+		<li>Halloween</li>
+		<li>Thanksgiving</li>
+		<li>Christmas</li>
+		</ul>
+	</div>
 
-<p><a href="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif" alt="sports mode" class="align-center" /></a>
-Game Day Mode:</p>
-<ul>
-  <li>Denver Broncos</li>
-  <li>Green Bay Packers</li>
-  <li>Texas Longhorns</li>
-  <li>Colorado Avalanche</li>
-</ul>
+	<div class="article-one"> 
+		<a href="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif" alt="sports mode" width="100%" /></a>
+		Game Day Mode:</p>
+		<ul>
+		<li>Denver Broncos</li>
+		<li>Green Bay Packers</li>
+		<li>Texas Longhorns</li>
+		<li>Colorado Avalanche</li>
+		</ul>
+	</div>
 
-<p><a href="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif" alt="solids mode" class="align-center" /></a>
-Solid Color Mode:</p>
-<ul>
-  <li>Red</li>
-  <li>Orange</li>
-  <li>Yellow</li>
-  <li>Chartreuse</li>
-  <li>Green</li>
-  <li>Mint</li>
-  <li>Cyan</li>
-  <li>Light Blue</li>
-  <li>Blue</li>
-  <li>Indigo</li>
-  <li>Purple</li>
-  <li>Magenta</li>
-</ul>
-
+	<div class="article-one"> 
+		<a href="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif" alt="solids mode" class="align-center" /></a>
+		Solid Color Mode:</p>
+		<ul>
+		<li>Red</li>
+		<li>Orange</li>
+		<li>Yellow</li>
+		<li>Chartreuse</li>
+		<li>Green</li>
+		<li>Mint</li>
+		<li>Cyan</li>
+		<li>Light Blue</li>
+		<li>Blue</li>
+		<li>Indigo</li>
+		<li>Purple</li>
+		<li>Magenta</li>
+		</ul>
 </div>
+
 </div>
 
 </body>
