Updated kobo page

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<div class="article-one">
-		<a href="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif" alt="normal mode" width="100%" /></a>
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif" alt="normal mode" width="100%" />
 		Normal Mode:</p>
 		<ul>
 		<li>Off</li>
@@ -42,7 +42,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<p><a href="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif" alt="holiday mode" width="100%" /></a>
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif" alt="holiday mode" width="100%" />
 		Holiday Mode:</p>
 		<ul>
 		<li>New Year’s Day</li>
@@ -58,7 +58,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<a href="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif" alt="sports mode" width="100%" /></a>
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif" alt="sports mode" width="100%" />
 		Game Day Mode:</p>
 		<ul>
 		<li>Denver Broncos</li>
@@ -69,7 +69,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<a href="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif"><img src="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif" alt="solids mode" class="align-center" /></a>
+		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif" alt="solids mode" class="align-center" />
 		Solid Color Mode:</p>
 		<ul>
 		<li>Red</li>
