--- a/projects/kobo/index.html
+++ b/projects/kobo/index.html
@@ -15,32 +15,51 @@
 
 <hr />
 
-<div class="projects">
-<div class="project">
+<div class="articles">
 
-<h1>Kobo Hacking</h1>
+	<div class="article-one">
+		<h1>Kobo Hacking</h1>
+		<a href="https://media.darkwire.com/kobo/weather.jpeg"><img src="https://media.darkwire.com/kobo/weather.jpeg" width="100%" /></a>
+		Displaying current weather conditions. The Kobo is pulling an image from a PHP script that uses the GD graphics library to assemble the data into a custom image on demand.
+	</div>
 
-        <p><img src="https://media.darkwire.com/kobo/weather.jpeg" width="640" />
-Displaying current weather conditions. The Kobo is pulling an image from a PHP script that uses the GD graphics library to assemble the data into a custom image on demand.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/kobo/kobo_vs_kindle.jpeg"><img src="https://media.darkwire.com/kobo/kobo_vs_kindle.jpeg" width="100%" /></a>
+		Kobo Touch (N905C) vs Kindle Paperwhite 2
+	</div>
 
-<p><img src="https://media.darkwire.com/kobo/kobo_vs_kindle.jpeg" width="640" />
-Kobo Touch (N905C) vs Kindle Paperwhite 2</p>
+	<div class="article-two">
+		<a href="https://media.darkwire.com/kobo/bottom_left.jpeg"><img src="https://media.darkwire.com/kobo/bottom_left.jpeg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="https://media.darkwire.com/kobo/bottom_right.jpeg"><img src="https://media.darkwire.com/kobo/bottom_right.jpeg" width="100%" /></a>
+	</div><div class="article-one">
+		Both Kobo N905C units
+	</div>
 
-<p><img src="https://media.darkwire.com/kobo/bottom_left.jpeg" width="640" />
-<img src="https://media.darkwire.com/kobo/bottom_right.jpeg" width="640" />
-Both Kobo N905C units</p>
+	<div class="article-two">
+		<a href="https://media.darkwire.com/kobo/kobo_v1.jpeg"><img src="https://media.darkwire.com/kobo/kobo_v1.jpeg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="https://media.darkwire.com/kobo/kobo_v2.jpeg"><img src="https://media.darkwire.com/kobo/kobo_v2.jpeg" width="100%" /></a>
+	</div><div class="article-one">
+		Comparison of N905C internals. Note the change from two to three wires on the battery and use of an SD card for storage.
+	</div>
 
-<p><img src="https://media.darkwire.com/kobo/kobo_v1.jpeg" width="640" />
-<img src="https://media.darkwire.com/kobo/kobo_v2.jpeg" width="640" />
-<img src="https://media.darkwire.com/kobo/logos.jpeg" width="640" />
-Comparison of N905C internals. Note the change from two to three wires on the battery and use of an SD card for storage.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/kobo/logos.jpeg"><img src="https://media.darkwire.com/kobo/logos.jpeg" width="100%" /></a>
+		Logo change between versions.
+	</div>
 
-<p><img src="https://media.darkwire.com/kobo/four_corners.jpeg" width="640" />
-<img src="https://media.darkwire.com/kobo/not_quite.jpeg" width="640" />
-<img src="https://media.darkwire.com/kobo/gears.jpeg" width="640" />
-Getting the image format sorted out for display. (600 x 800 grayscale)</p>
+	<div class="article-three">
+		<a href="https://media.darkwire.com/kobo/four_corners.jpeg"><img src="https://media.darkwire.com/kobo/four_corners.jpeg" width="100%" /></a>
+	</div><div class="article-three">
+		<a href="https://media.darkwire.com/kobo/not_quite.jpeg"><img src="https://media.darkwire.com/kobo/not_quite.jpeg" width="100%" /></a>
+	</div><div class="article-three">
+		<a href="https://media.darkwire.com/kobo/gears.jpeg"><img src="https://media.darkwire.com/kobo/gears.jpeg" width="100%" /></a>
+	</div><div class="article-one">
+		Getting the image format sorted out for display. (600 x 800 grayscale) The left image is what happens when you don't get the format quite right.
+	</div>
+	</div>
 
-</div>
 </div>
 
 </body>
