Temp sensor and battery killer page formatting

--- a/projects/battery-killer/index.html
+++ b/projects/battery-killer/index.html
@@ -15,32 +15,45 @@
 
 <hr />
 
-<div class="projects">
-<div class="project">
+<div class="articles">
 
-<h1>Battery Killer</h1>
+	<div class="article-one">
+		<h1>Battery Killer</h1>
+		<p>This project was a test of several things:</p>
+		<ul>
+		<li>PCB design</li>
+		<li>ATTiny in-place programming</li>
+		<li>Surface mount soldering skills</li>
+		</ul>
 
-        <p>This project was a test of several things:</p>
-<ul>
-  <li>PCB design</li>
-  <li>ATTiny in-place programming</li>
-  <li>Surface mount soldering skills</li>
-</ul>
+		<p>I had seen people building joule thief circuits to use up the last remaining power from nearly dead batteries but I wanted
+		to do something more complex as a challenge. I decided to build a custom PCB around a single AA battery holder and use it to power an ATTiny85.</p>
+	</div>
 
-<p>I had seen people building joule thief circuits to use up the last remaining power from nearly dead batteries but I wanted to do something more complex as a challenge. I decided to build a custom PCB around a single AA battery holder and use it to power an ATTiny85.</p>
+	<div class="article-one">
+		<img src="https://media.darkwire.com/battery-killer/battery_killer.jpg" width="100%" />
+		I started by selecting a single cell AA holder that would provide the PCB footprint. I wanted something with through-hole pins so that I wouldn’t
+		have any wires that could eventually break.
+	</div>
 
-<p><img src="https://media.darkwire.com/battery-killer/battery_killer.jpg" width="100%" /></p>
+	<div class="article-one">
+		The next step was designing a power supply. I knew that I needed a minimum of 1.8v to run the ATTiny85 controller so I opted for an MCP1640T boost
+		regulator. It’s capable of running on well below 1.0v input and has an adjustable output from 2.0 to 5.5v which was perfect for my application.
+	</div>
 
-<p>I started by selecting a single cell AA holder that would provide the PCB footprint. I wanted something with through-hole pins so that I wouldn’t have any wires that could eventually break.</p>
 
-<p>The next step was designing a power supply. I knew that I needed a minimum of 1.8v to run the ATTiny85 controller so I opted for an MCP1640T boost regulator. It’s capable of running on well below 1.0v input and has an adjustable output from 2.0 to 5.5v which was perfect for my application.</p>
+	<div class="article-two">
+		<img src="https://media.darkwire.com/battery-killer/board_top.png" /><br>
+		<span class="caption">PCB Front</span>
+	</div><div class="article-two">
+		<img src="https://media.darkwire.com/battery-killer/board_bottom.png" /><br>
+		<span class="caption">PCB Back</span>
+	</div>
 
-<p><img src="https://media.darkwire.com/battery-killer/board_top.png" width="100%" />
-<img src="https://media.darkwire.com/battery-killer/board_bottom.png" width="100%" /></p>
+	<div class="article-one">
+		The notch in the PCB is actually to allow clearance for an orientation pin on the battery holder.
+	</div>
 
-<p>The notch in the PCB is actually to allow clearance for an orientation pin on the battery holder.</p>
-
-</div>
 </div>
 
 </body>
