Linked most images to original size

--- a/projects/battery-killer/index.html
+++ b/projects/battery-killer/index.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<div class="article-one">
-		<img src="https://media.darkwire.com/battery-killer/battery_killer.jpg" width="100%" />
+		<a href="https://media.darkwire.com/battery-killer/battery_killer.jpg"><img src="https://media.darkwire.com/battery-killer/battery_killer.jpg" width="100%" /></a>
 		I started by selecting a single cell AA holder that would provide the PCB footprint. I wanted something with through-hole pins so that I wouldn’t
 		have any wires that could eventually break.
 	</div>
