--- a/projects/wine-cellar/index.html
+++ b/projects/wine-cellar/index.html
@@ -15,32 +15,47 @@
 
 <hr />
 
-<div class="projects">
-<div class="project">
+<div class="articles">
 
-<h1>Wine Cellar</h1>
+	<div class="article-one">
+		<h1>Wine Cellar</h1>
+		This project was about efficient use of space more than anything else. Calling the end result a wine cellar is really an exaggeration. We live in a small
+		space and need to make use of every bit of storage that we can. There is an awkward closet off the garage that has the water main and sewer plumbing so it needs
+		to be accessible but it’s tucked under the stairs so it’s not terribly useful for storage. I couldn’t put any sort of shelving in front of the water shutoff
+		valve so I was left with limited options. I decided that a wall-mounted wine rack would be perfect as it would be out of the way of the plumbing and still easily usable.
+	</div>
 
-<p>This project was about efficient use of space more than anything else. Calling the end result a wine cellar is really an exaggeration. We live in a small space and need to make use of every bit of storage that we can. There is an awkward closet off the garage that has the water main and sewer plumbing so it needs to be accessible but it’s tucked under the stairs so it’s not terribly useful for storage. I couldn’t put any sort of shelving in front of the water shutoff valve so I was left with limited options. I decided that a wall-mounted wine rack would be perfect as it would be out of the way of the plumbing and still easily usable.</p>
+	<div class="article-one">
+		<img src="https://media.darkwire.com/wine-cellar/brogrund.jpg" width="100%" />
+		I would love to take credit for this idea but I had found it previously somewhere on the internet. A double rail towel bar (Brogrund, $9.99 from IKEA) works perfectly
+		to hold a pair of bottles, looks great, and was easy to adjust to the exact spacing I wanted.
+	</div>
 
-<p><img src="https://media.darkwire.com/wine-cellar/brogrund.jpg" width="100%" />
-I would love to take credit for this idea but I had found it previously somewhere on the internet. A double rail towel bar (Brogrund, $9.99 from IKEA) works perfectly to hold a pair of bottles, looks great, and was easy to adjust to the exact spacing I wanted.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/wine-cellar/closet_painted.jpg"><img src="https://media.darkwire.com/wine-cellar/closet_painted.jpg" width="100%" /></a>
+		The utility closet after the first coat of primer.
+	</div>
 
-<p><img src="https://media.darkwire.com/wine-cellar/closet_painted.jpg" width="100%" />
-The utility closet after the first coat of primer.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/wine-cellar/mounting_holes.jpg"><img src="https://media.darkwire.com/wine-cellar/mounting_holes.jpg" width="100%" /></a>
+		Pre-drilling the mounting holes for the towel bars. I opted for slightly larger gaps between rows in order to hold 1.5L or 1.75L bottles rather than going for maximum density.
+	</div>
 
-<p><img src="https://media.darkwire.com/wine-cellar/mounting_holes.jpg" width="100%" />
-Pre-drilling the mounting holes for the towel bars. I opted for slightly larger gaps between rows in order to hold 1.5L or 1.75L bottles rather than going for maximum density.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/wine-cellar/test_fit.jpg"><img src="https://media.darkwire.com/wine-cellar/test_fit.jpg" width="100%" /></a>
+		Making sure everything fits as planned.
+	</div>
 
-<p><img src="https://media.darkwire.com/wine-cellar/test_fit.jpg" width="100%" />
-Making sure everything fits as planned.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/wine-cellar/first_rows.jpg"><img src="https://media.darkwire.com/wine-cellar/first_rows.jpg" width="100%" /></a>
+		Testing out the first few rows with bottles.
+	</div>
 
-<p><img src="https://media.darkwire.com/wine-cellar/first_rows.jpg" width="100%" />
-Testing out the first few rows with bottles.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/wine-cellar/finished_before_lights.jpg"><img src="https://media.darkwire.com/wine-cellar/finished_before_lights.jpg" width="100%" /></a>
+		Twelve rows of bottles plus space underneath for boxes.
+	</div>
 
-<p><img src="https://media.darkwire.com/wine-cellar/finished_before_lights.jpg" width="100%" />
-Twelve rows of bottles plus space underneath for boxes.</p>
-
-</div>
 </div>
 
 </body>
