--- a/projects/homelab/index.html
+++ b/projects/homelab/index.html
@@ -14,50 +14,71 @@
 </div>
 
 <hr />
-<div class="projects">
-<div class="project">
 
-<h1>Home Network &amp; Servers</h1>
+<div class="articles">
 
-<p><img src="https://media.darkwire.com/homelab/full_rack.jpg" width="100%" /></p>
+	<div class="article-one">
+		<h1>Home Network &amp; Servers</h1>
+		<a href="https://media.darkwire.com/homelab/full_rack.jpg"><img src="https://media.darkwire.com/homelab/full_rack.jpg" width="100%" /></a>
 
-<p>Top to bottom:</p>
+		Top to bottom:
 
-<p>Coax patch panel<br />
-Blank panel insert with coax splitter<br />
-Cat 6 patch panel<br />
-Edimax GS-1026 V2 Gigabit switch</p>
+		<p>Coax patch panel<br />
+		Blank panel insert with coax splitter<br />
+		Cat 6 patch panel<br />
+		Edimax GS-1026 V2 Gigabit switch</p>
 
-<p>4 x Ubiquiti PoE Injectors<br />
-Ubiquiti EdgeRouter-X</p>
+		<p>4 x Ubiquiti PoE Injectors<br />
+		Ubiquiti EdgeRouter-X</p>
 
-<p>Google Home Mini<br />
-HP ML310e v2 running VMware</p>
+		<p>Google Home Mini<br />
+		HP ML310e v2 running VMware</p>
 
-<p>APC Back-UPS ES 550</p>
+		<p>APC Back-UPS ES 550</p>
+	</div>
 
-<p><img src="https://media.darkwire.com/homelab/pre_install.jpg" width="100%" />
-This was my starting point. The in-wall wiring was done but it was up to me to deal with termination at both the wall jacks and the head end in my garage.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/homelab/pre_install.jpg"><img src="https://media.darkwire.com/homelab/pre_install.jpg" width="100%" /></a>
+		This was my starting point. The in-wall wiring was done but it was up to me to deal with termination at both the wall jacks and the head end in my garage.
+	</div>
 
-<p><img src="https://media.darkwire.com/homelab/initial_pull.jpg" width="100%" />
-I’ve always liked using 3/4” plywood as a backer board. It’s sturdy enough to hold any kind of gear and gives you a ton of flexibility on mounting locations. I opted to move the wire runs up near the top as they don’t change much once the patch panels are in place. I also wanted to leave space to mount my server underneath if possible. This initial setup was just enough to get me online.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/homelab/initial_pull.jpg"><img src="https://media.darkwire.com/homelab/initial_pull.jpg" width="100%" /></a>
+		I’ve always liked using 3/4” plywood as a backer board. It’s sturdy enough to hold any kind of gear and gives you a ton of flexibility on mounting locations. I optedd
+		to move the wire runs up near the top as they don’t change much once the patch panels are in place. I also wanted to leave space to mount my server underneath if
+		possible. This initial setup was just enough to get me online.
+	</div>
 
-<p><img src="https://media.darkwire.com/homelab/edimax_switch.jpg" width="100%" />
-I selected this Edimax switch because it fits my rack and has enough gigabit ports that I can leave all my wall jacks connected. It’s just over 5 inches deep and still just barely fits in my rack with the mounting ears flipped to give extra clearance for the power plug in back. On the performance side it’s great with 48 Gbps switching capacity and jumbo frame support.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/homelab/edimax_switch.jpg"><img src="https://media.darkwire.com/homelab/edimax_switch.jpg" width="100%" /></a>
+		I selected this Edimax switch because it fits my rack and has enough gigabit ports that I can leave all my wall jacks connected. It’s just over 5 inches deep and
+		still just barely fits in my rack with the mounting ears flipped to give extra clearance for the power plug in back. On the performance side it’s great with 48 Gbps
+		switching capacity and jumbo frame support.
+	</div>
 
-<p><img src="https://media.darkwire.com/homelab/patch_panels.jpg" width="100%" />
-Each room has one or more wall plates with one coax and two Ethernet runs that connect back to this set of patch panels. The in-wall wiring is all quad-shielded RG-6 coax and Cat 6 Ethernet in order to support any present day needs as well as provide a reasonable level of future-proofing. Some people will suggest pulling optical fiber in the walls but I just don’t think it’s justified for home use, particularly with 2.5 and 5 gigabit options over Cat 6 becoming available.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/homelab/patch_panels.jpg"><img src="https://media.darkwire.com/homelab/patch_panels.jpg" width="100%" /></a>
+		Each room has one or more wall plates with one coax and two Ethernet runs that connect back to this set of patch panels. The in-wall wiring is all quad-shielded RG-6
+		coax and Cat 6 Ethernet in order to support any present day needs as well as provide a reasonable level of future-proofing. Some people will suggest pulling optical
+		fiber in the walls but I just don’t think it’s justified for home use, particularly with 2.5 and 5 gigabit options over Cat 6 becoming available.
+	</div>
 
-<p><img src="https://media.darkwire.com/homelab/fiber_feed.jpg" width="100%" />
-This is the inside of the telecom box used to provide CenturyLink fiber service. The black line running from the top of the box is the fiber feed from the telephone pole. The gray Cat 5e and black power cables run through the middle conduit to my garage.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/homelab/fiber_feed.jpg"><img src="https://media.darkwire.com/homelab/fiber_feed.jpg" width="100%" /></a>
+		This is the inside of the telecom box used to provide CenturyLink fiber service. The black line running from the top of the box is the fiber feed from the telephone pole.
+		The gray Cat 5e and black power cables run through the middle conduit to my garage.
+	</div>
 
-<p><img src="https://media.darkwire.com/homelab/adtran_router.jpg" width="100%" />
-The box actually contains an Adtran Total Access 352 ONT that converts the fiber into a pair of Ethernet ports and a pair of phone lines.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/homelab/adtran_router.jpg"><img src="https://media.darkwire.com/homelab/adtran_router.jpg" width="100%" /></a>
+		The box actually contains an Adtran Total Access 352 ONT that converts the fiber into a pair of Ethernet ports and a pair of phone lines.
+	</div>
 
-<p><img src="https://media.darkwire.com/homelab/coax_splitters.jpg" width="100%" />
-Apparently I’ve amassed quite the collection of coax splitters over the years. The cable techs generally seem to agree that the Antronix, CommScope, and PCT gear is all pretty good.</p>
+	<div class="article-one">
+		<a href="https://media.darkwire.com/homelab/coax_splitters.jpg"><img src="https://media.darkwire.com/homelab/coax_splitters.jpg" width="100%" /></a>
+		Apparently I’ve amassed quite the collection of coax splitters over the years. The cable techs generally seem to agree that the Antronix, CommScope, and PCT gear is all pretty good.
+	</div>
 
-</div>
 </div>
 
 </body>
