--- a/projects/wemos-temp/index.html
+++ b/projects/wemos-temp/index.html
@@ -31,7 +31,7 @@
 
 
 	<div class="article-one">
-		<img src="https://media.darkwire.com/wemos-temp/with_oled.jpeg" width="100%"/>
+		<a href="https://media.darkwire.com/wemos-temp/with_oled.jpeg"><img src="https://media.darkwire.com/wemos-temp/with_oled.jpeg" width="100%"/></a>
 
 		<p>Initially I was measuring at a location with a power outlet so I was able to just use a USB adapter for power. The second location
 		I wanted to monitor was a utility closet in my garage that didn’t have an outlet so I needed to come up with another option. I knew that
@@ -41,7 +41,7 @@
 		deep sleep mode was perfect as I didn’t need any sort of wifi or CPU function other than a wake up trigger from the real time clock (RTC).
 		This is amazingly simple in code:</p>
 
-		<p><code class="highlighter-rouge">ESP.deepSleep(sleep_delay * 1000000); // microseconds</code></p>
+		<p><code>ESP.deepSleep(sleep_delay * 1000000); // microseconds</code></p>
 
 		<p>On the hardware side all I needed to do was connect pin D0 to RST. The RTC sends a pulse on D0 when the timer expires and triggers a
 		reset of the controller. At that point it starts the normal boot cycle and runs any code as usual. For this project I set it up to connect
@@ -49,17 +49,17 @@
 	</div>
 
 	<div class="article-one">
-		<p><img src="https://media.darkwire.com/wemos-temp/top_view.jpeg" width="100%" />
+		<a href="https://media.darkwire.com/wemos-temp/top_view.jpeg"><img src="https://media.darkwire.com/wemos-temp/top_view.jpeg" width="100%" /></a>
 		The orange jumper wire is the reset trigger, running from D0 to RST.
 	</div>
 
 	<div class="article-one">
-		<img src="https://media.darkwire.com/wemos-temp/side_view.jpeg" width="100%" />
+		<a href="https://media.darkwire.com/wemos-temp/side_view.jpeg"><img src="https://media.darkwire.com/wemos-temp/side_view.jpeg" width="100%" /></a>
 		I’m using a dual base module as it provides an easy way to mount the WeMos to the battery pack with double-sided tape.
 	</div>
 
 	<div class="article-one">
-		<img src="https://media.darkwire.com/wemos-temp/battery_pack.jpeg" width="100%" />
+		<a href="https://media.darkwire.com/wemos-temp/battery_pack.jpeg"><img src="https://media.darkwire.com/wemos-temp/battery_pack.jpeg" width="100%" /></a>
 		3 x AA battery pack wired into the 5v and ground pins on the WeMos module. It works fine for the minimal current draw I need for the WeMos
 		itself plus the DHT22 temp sensor. The device stops working when the batteries get down to around 3.5v or so.
 	</div>
