Smaller towel bar width

--- a/projects/wine-cellar/index.html
+++ b/projects/wine-cellar/index.html
@@ -26,7 +26,10 @@
 	</div>
 
 	<div class="article-one">
-		<img src="https://media.darkwire.com/wine-cellar/brogrund.jpg" width="100%" />
+		<img src="https://media.darkwire.com/wine-cellar/brogrund.jpg" width="70%" />
+	</div>
+
+	<div class="article-one">
 		I would love to take credit for this idea but I had found it previously somewhere on the internet. A double rail towel bar (Brogrund, $9.99 from IKEA) works perfectly
 		to hold a pair of bottles, looks great, and was easy to adjust to the exact spacing I wanted.
 	</div>
