Wine cellar updates

--- a/projects/wine-cellar/index.html
+++ b/projects/wine-cellar/index.html
@@ -39,24 +39,35 @@
 		The utility closet after the first coat of primer.
 	</div>
 
-	<div class="article-one">
+	<div class="article-three">
 		<a href="https://media.darkwire.com/wine-cellar/mounting_holes.jpg"><img src="https://media.darkwire.com/wine-cellar/mounting_holes.jpg" width="100%" /></a>
-		Pre-drilling the mounting holes for the towel bars. I opted for slightly larger gaps between rows in order to hold 1.5L or 1.75L bottles rather than going for maximum density.
+	</div><div class="article-three">
+		<a href="https://media.darkwire.com/wine-cellar/mounting_holes_2.jpg"><img src="https://media.darkwire.com/wine-cellar/mounting_holes_2.jpg" width="100%" /></a>
+	</div><div class="article-three">
+		<a href="https://media.darkwire.com/wine-cellar/mounting_holes_painted.jpg"><img src="https://media.darkwire.com/wine-cellar/mounting_holes_painted.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		Pre-drilling the mounting holes for the towel bars in plywood. The wall studs just didn't line up with my mounting locations and I didn't ever want the risk of having
+		a shelf pull out of the drywall.
+	</div>
+
+	<div class="article-one">
+		<a href="https://media.darkwire.com/wine-cellar/oops_clearance.jpg"><img src="https://media.darkwire.com/wine-cellar/oops_clearance.jpg" width="100%" /></a>
+		Wait a second, how is that going to clear the drain pipe? And even if it does, there is no way to fit bottles on it.
 	</div>
 
 	<div class="article-one">
 		<a href="https://media.darkwire.com/wine-cellar/test_fit.jpg"><img src="https://media.darkwire.com/wine-cellar/test_fit.jpg" width="100%" /></a>
-		Making sure everything fits as planned.
+		Sure enough, that top row has to go.
 	</div>
 
 	<div class="article-one">
 		<a href="https://media.darkwire.com/wine-cellar/first_rows.jpg"><img src="https://media.darkwire.com/wine-cellar/first_rows.jpg" width="100%" /></a>
-		Testing out the first few rows with bottles.
+		Much better clearance with the top row removed. Testing the first few rows with both 750mL and 1.5L bottles. 
 	</div>
 
 	<div class="article-one">
 		<a href="https://media.darkwire.com/wine-cellar/finished_before_lights.jpg"><img src="https://media.darkwire.com/wine-cellar/finished_before_lights.jpg" width="100%" /></a>
-		Twelve rows of bottles plus space underneath for boxes.
+		Twelve rows of bottles plus space underneath for boxes. Moving that original top row to the bottom of the rack was the right call.
 	</div>
 
 </div>
