Added playsinline to battery killer page so video works on iOS devices

--- a/projects/battery-killer/index.html
+++ b/projects/battery-killer/index.html
@@ -73,7 +73,7 @@
 	</div>
 
 	<div class="article-one">
-		<video src="https://media.darkwire.com/battery-killer/bk_pwm_fade.mp4" width="100%" autoplay loop></video>
+		<video src="https://media.darkwire.com/battery-killer/bk_pwm_fade.mp4" width="100%" autoplay playsinline loop></video>
 	</div>
 
 </div>
