Added playsinline to A320

--- a/projects/A320/index.html
+++ b/projects/A320/index.html
@@ -22,7 +22,7 @@
 	</div>
 
 	<div class="article-one">
-		<video src="https://media.darkwire.com/a320_1440b.mp4" width="100%" autoplay loop></video>
+		<video src="https://media.darkwire.com/a320_1440b.mp4" width="100%" autoplay playsinline muted loop></video>
 		This is the A320 blink sequence based on the actual aircraft. Airbus uses a set pattern while most Boeing aircraft appear to have independent timing for the top, bottom, tail and wingtip strobes. 
 	</div>
 
