--- a/projects/A320/index.html
+++ b/projects/A320/index.html
@@ -22,7 +22,8 @@
 	</div>
 
 	<div class="article-one">
-		<video src="https://media.darkwire.com/a320_1440b.mp4" width="100%" autoplay playsinline muted loop></video>
+		<img id="a320" src="https://alundeby.github.io/images/a320_one_frame.jpg" width="100%">
+		<!--<video src="https://media.darkwire.com/a320_1440b.mp4" width="100%" autoplay playsinline muted loop></video>-->
 		This is the A320 blink sequence based on the actual aircraft. Airbus uses a set pattern while most Boeing aircraft appear to have independent timing for the top, bottom, tail and wingtip strobes. 
 	</div>
 
@@ -55,6 +56,11 @@
 	</div>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+<script>
+	$("#a320").replaceWith("<video src='https://media.darkwire.com/a320_1440b.mp4' width='100%' autoplay muted playsinline loop></video>");
+</script>
 
 </body>
 </html>
