--- a/projects/A320/index.html
+++ b/projects/A320/index.html
@@ -22,8 +22,7 @@
 	</div>
 
 	<div class="article-one">
-		<img id="a320" src="https://alundeby.github.io/images/a320_one_frame.jpg" width="100%">
-		<!--<video src="https://media.darkwire.com/a320_1440b.mp4" width="100%" autoplay playsinline muted loop></video>-->
+		<video src="https://media.darkwire.com/a320_1440b.mp4" width="100%" autoplay playsinline muted loop></video>
 		This is the A320 blink sequence based on the actual aircraft. Airbus uses a set pattern while most Boeing aircraft appear to have independent timing for the top, bottom, tail and wingtip strobes. 
 	</div>
 
