More cablights text and pics

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -21,17 +21,42 @@
 	<div class="article-one">
 		<h1>LED Cabinet Lights</h1>
 
+		<p>I'm a big fan of under-cabinet lighting in the kitchen and have installed it in all of my homes. There are plenty of LED options available on the market but I wasn't able to find any with a dimmer setup that
+		I liked. In the past I had a Xenon set that used a touch sensor to cycle through low &gt; medium &gt; high &gt; off and it was perfect. For some reason the current LED sets all use a one-button variable dimmer
+		so you're stuck with on/off at whatever the last setting was and then having to hold the switch until it dims to the level you want.
+
+		<p>I decided that if I was going to build the perfect LED dimmer setup I may as well
+		add RGB into the mix. Now I can tweak the white balance for a nice warm glow at lower brightness levels as well as have fun color modes for holidays and parties.
+
 		<p>Hardware:<br />
 		<a href="https://www.particle.io/">Particle Photon</a><br />
+		<a href="https://www.adafruit.com/product/2842">RGBW LED Strip</a><br />
 		<a href="https://www.adafruit.com/product/1374">AT42QT1010 touch sensor</a><br />
-		<a href="https://www.adafruit.com/product/574">Integrated current meter</a></p>
+		<a href="https://www.adafruit.com/product/574">Integrated current meter</a>
+	</div>
 
-		<p>Short press: change to next state in current mode<br />
-		Long Press (3+ seconds): change to next mode</p>
+	<div class="article-two">
+		<a href="https://media.darkwire.com/cablights/channel_mount.jpg"><img src="https://media.darkwire.com/cablights/channel_mount.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="https://media.darkwire.com/cablights/touch_sensor.jpg"><img src="https://media.darkwire.com/cablights/touch_sensor.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		The LED strips are mounted in aluminum channels with frosted plastic covers to help disperse the light more evenly. The aluminum channels provide protection for the strip and a cleaner look overall.
+		The touch sensor will eventually converted into a nicer looking panel but for now is just tacked in place with hot glue.
 	</div>
 
 	<div class="article-one">
-		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_normal_demo.gif" alt="normal mode" width="100%" />
+		 <a href="https://media.darkwire.com/cablights/led_power.jpg"><img src="https://media.darkwire.com/cablights/led_power.jpg" width="100%" /></a>
+		I mounted the control and power circuitry in the cabinet above my microwave. It already had a power outlet available and provided a central location to run all the wires to. I used a surface mount
+		box so that I could remove the front plate for easy access in case something needed tweaking. 
+	</div>
+
+	<div class="article-one">
+		Short press: change to next state (brightness or color scheme) in current mode<br />
+		Hold 3+ seconds: change to next mode</p>
+	</div>
+
+	<div class="article-one">
+		<img src="https://media.darkwire.com/cablights_normal_demo.gif" width="100%" />
 		Normal Mode:</p>
 		<ul>
 		<li>Off</li>
@@ -42,7 +67,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_holiday_demo.gif" alt="holiday mode" width="100%" />
+		<img src="https://media.darkwire.com/cablights_holiday_demo.gif" width="100%" />
 		Holiday Mode:</p>
 		<ul>
 		<li>New Year’s Day</li>
@@ -58,7 +83,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_sports_demo.gif" alt="sports mode" width="100%" />
+		<img src="https://media.darkwire.com/cablights_sports_demo.gif" width="100%" />
 		Game Day Mode:</p>
 		<ul>
 		<li>Denver Broncos</li>
@@ -69,7 +94,7 @@
 	</div>
 
 	<div class="article-one"> 
-		<img src="https://storage.googleapis.com/media.darkwire.com/cablights_solids_demo.gif" alt="solids mode" class="align-center" />
+		<img src="https://media.darkwire.com/cablights_solids_demo.gif" width="100%" />
 		Solid Color Mode:</p>
 		<ul>
 		<li>Red</li>
