Testing mozjpeg compression

--- a/projects/cablights/index.html
+++ b/projects/cablights/index.html
@@ -36,16 +36,16 @@
 	</div>
 
 	<div class="article-two">
-		<a href="https://media.darkwire.com/cablights/channel_mount.jpg"><img src="https://media.darkwire.com/cablights/channel_mount.jpg" width="100%" /></a>
+		<a href="/images/cablights/channel_mount.jpg"><img src="/images/cablights/channel_mount.jpg" width="100%" /></a>
 	</div><div class="article-two">
-		<a href="https://media.darkwire.com/cablights/touch_sensor.jpg"><img src="https://media.darkwire.com/cablights/touch_sensor.jpg" width="100%" /></a>
+		<a href="/images/cablights/touch_sensor.jpg"><img src="/images/cablights/touch_sensor.jpg" width="100%" /></a>
 	</div><div class="article-one">
 		The LED strips are mounted in aluminum channels with frosted plastic covers to help disperse the light more evenly. The aluminum channels provide protection for the strip and a cleaner look overall.
 		The touch sensor will eventually converted into a nicer looking panel but for now is just tacked in place with hot glue.
 	</div>
 
 	<div class="article-one">
-		 <a href="https://media.darkwire.com/cablights/led_power.jpg"><img src="https://media.darkwire.com/cablights/led_power.jpg" width="100%" /></a>
+		 <a href="/images/cablights/led_power.jpg"><img src="/images/cablights/led_power.jpg" width="100%" /></a>
 		I mounted the control and power circuitry in the cabinet above my microwave. It already had a power outlet available and provided a central location to run all the wires to. I used a surface mount
 		box so that I could remove the front plate for easy access in case something needed tweaking. 
 	</div>
