--- a/projects/A320/index.html
+++ b/projects/A320/index.html
@@ -19,11 +19,141 @@
 
 	<div class="article-one">
 		<h1>Lighted A320 Models</h1>
+		<!--I think that the A320 project is easily one of my favorites. It was technically challenging for me as it incorporated a mix of model building skills, detailed electronics work, and was my first real custom circuit board design.
+
+		<p>The initial idea was to build a christmas tree topper as a gift for my brother. He's a pilot for American Airlines now but at the time was flying the A320 for US Air. At first I was planning on using a scale model kit because it would give me easy access to the interior of the fuselage and wings so that I could run wires during constrution. Unfortunately, I ran into roadblocks with both the selection of airline liveries available as well as the physical size of the assembled kits. I thought that I could work around the livery issue, but I was really set on having this be at a scale that would work as a tree topper.
+
+	<p>Plan B for the aircraft portion was a 1:200 scale pre-painted kit from HoganWings. The upside is that the right aircraft was available in the right size and even came in the livery that I was looking for. The downside is that it came out of the box with the fuselage already a solid tube and nowhere to run wires inside the wings.
+
+	<p>I really liked the idea of being able to focus on the electronics side of the project and having the model building mostly done but i needed to make sure that the kit was really going to work for my needs. The only way to be sure was to get one and do some exploratory cutting to see how much internal space I had to work with.
+
+	<p>I started cutting intot he fuselage and found out that I was generally in good shape. I had worried that it was going to be solid plastic because of th weight but it turned out that it was a hollow tube with a zinc bar running down the middle, supported by two plastic posts. The rear post was easy to remove as it was just behind the wings but the front was attached at the same location as the nose landing gear. (On the scrificial kit I ended up cutting all the way along the bottom of the fuselage but I figured out that I was able to just drill the front post on the production versions.)
+
+	<p>With the zinc weight removed I was able to measure the inner dimensions of the fuselage and start planning my circuit board. 
+
+	<p>I also needed a way to mount the finished aircraft for display as well as provide power to the lights. Why not combine the two by using a barrel plug!
+
+	<p>So now I have my circuit board and power, but need a way to mount everything securely in the fuselage and seal up the hole. I opted for 3D printing as it would let me build the exact shape I wanted to match the curves of the fuselage on the outside while also providing stucture on the inside to hold the barrel jack and circuit board. I also designed it so that inserting the wings would lock the whole assembly in place but allow it to be removed in the future if necessary.-->
 	</div>
 
 	<div class="article-one">
 		<video src="/images/a320_1440b.mp4" width="100%" autoplay loop muted playsinline></video>
-		This is the A320 blink sequence based on the actual aircraft. Airbus uses a set pattern while most Boeing aircraft appear to have independent timing for the top, bottom, tail and wingtip strobes. 
+		This is the navigation light strobe sequence based on the actual Airbus A320 aircraft. Airbus uses a set pattern while most Boeing aircraft appear to have independent timing for the top, bottom, tail and wingtip strobes. 
+	</div>
+
+
+
+	<div class="article-one">
+		<h2>Electronics</h2>
+		<hr />
+	</div>
+
+	<div class="article-one">
+		<a href="/images/a320/first_prototype.jpg"><img src="/images/a320/first_prototype.jpg" width="100%" /></a>
+		First breadboard prototype of the idea using an Arduino Diecimila and TPIC6B595N shift register to control the LEDs.
+	</div>
+
+	<div class="article-two">
+		<a href="/images/a320/attiny85_flash.jpg"><img src="/images/a320/attiny85_flash.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/a320/attiny85_prototype.jpg"><img src="/images/a320/attiny85_prototype.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		Flashing the code to an ATTiny85 in order to save space and testing directly from a wall power supply.
+	</div>
+
+	<div class="article-two">
+		<a href="/images/a320/test_rig_front.jpg"><img src="/images/a320/test_rig_front.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/a320/test_rig_back.jpg"><img src="/images/a320/test_rig_back.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		I built a test rig using the same components as the ones that would be installed in the final model so that I had an easy way to test code changes.
+	</div>
+
+	<div class="article-one">
+		<a href="/images/a320/led_sizes.jpg"><img src="/images/a320/led_sizes.jpg" width="100%" /></a>
+		Comparing 1206 and 0603 surface mount LED size options for the wingtip lights. Of course the smaller ones look better and are much harder to solder.
+	</div>
+
+	<div class="article-two">
+		<a href="/images/a320/led_tweezers.jpg"><img src="/images/a320/led_tweezers.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/a320/tweezer_clamp.jpg"><img src="/images/a320/tweezer_clamp.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		The 0603 LEDs are so small and light that it is impossible to solder them without some way to clamp them in place. I ended up grinding down a pair of tweezers to the exact width
+		required to hold a pair of them back-to-back for the wingtip assemblies.
+	</div>
+
+	<div class="article-one">
+		<a href="/images/a320/wings_v1.jpg"><img src="/images/a320/wings_v1.jpg" width="100%" /></a>
+		With the wingtip LED assemblies complete it was time to mount them on the wings. I cut a notch to help them sit flush with the leading edge of the wing and secured them with clear epoxy. I then ran the
+		wires from each wingtip along the underside of the wing and secured it with epoxy as well.
+	</div>
+
+
+
+	<div class="article-one">
+		<h2>Model Kit</h2>
+		<hr />
+	</div>
+
+	<!--<div class="article-two">
+		<a href="/images/a320/zinc_weight.jpg"><img src="/images/a320/zinc_weight.jpg" width="100%" /></a>
+	</div>--><div class="article-two">
+		<a href="/images/a320/zinc_weight.jpg"><img src="/images/a320/zinc_weight.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		Each fuselage contains a zinc weight in order to keep the plane resting on its nose gear. I needed to figure out the minimum size hole that I had to cut to remove it, which required sacrificing a kit.
+	</div>
+
+	<div class="article-one">
+		<a href="/images/a320/cutting_jig.jpg"><img src="/images/a320/cutting_jig.jpg" width="100%" /></a>
+		Once I had the dimensions for the hole worked out I built a cutting jig. I used hot glue to create the actual clamp that holds the fuselage in place. It's safe on the paint and has just enough flex when removed from
+		the MDF part of the jig that it's easy to insert and remove the fuselage.
+	</div>
+
+	<div class="article-three">
+		<a href="/images/a320/cutting_dirty.jpg"><img src="/images/a320/cutting_dirty.jpg" width="100%" /></a>
+	</div><div class="article-three">
+		<a href="/images/a320/cutting_clean.jpg"><img src="/images/a320/cutting_clean.jpg" width="100%" /></a>
+	</div><div class="article-three">
+		<a href="/images/a320/cutting_done.jpg"><img src="/images/a320/cutting_done.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		My cutting tool was an adjustable speed Dremel with a router attachment so that I could set the cutting depth just above the zinc weight.
+	</div>
+
+
+	<div class="article-one">
+		<h2>3D Insert</h2>
+		<hr />
+	</div>
+
+	<div class="article-two">
+		<a href="/images/a320/3d_insert_v1.jpg"><img src="/images/a320/3d_insert_v1.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/a320/3d_insert_v1_prefit.jpg"><img src="/images/a320/3d_insert_v1_prefit.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		<p><a href="/images/a320/3d_insert_v1_postfit.jpg"><img src="/images/a320/3d_insert_v1_postfit.jpg" width="100%" /></a>
+		I designed a 3D printed part to replace the missing section of fuselage. The cutout was designed to hold a barrel jack which would also serve as the mounting point for the finished aircraft.
+	</div>
+
+	<div class="article-two">
+		<a href="/images/a320/3d_insert_v2.jpg"><img src="/images/a320/3d_insert_v2.jpg" width="100%" /></a>
+	</div><div class="article-two">
+		<a href="/images/a320/3d_insert_v2_flex.jpg"><img src="/images/a320/3d_insert_v2_flex.jpg" width="100%" /></a>
+	</div><div class="article-one">
+		The first version of the insert had a tendency to get pushed into the fuselage near the tail. I created a second version that had a thin post that would keep that from happening by pushing against
+		the top of the plane from the inside. I also added slots to completely surround the wing tabs and lock the entire assembly in place once they were inserted.
+	</div>
+
+
+
+	<div class="article-one">
+		<h2>Assembly</h2>
+		<hr />
+	</div>
+
+	<div class="article-one">
+		<a href="/images/a320/v1_install_size.jpg"><img src="/images/a320/v1_install_size.jpg" width="100%" /></a>
+		There is not a lot of space to work with inside of these models. I had to split the ATTiny and shift register as neither end had enough space to hold both ICs with the wing tabs inserted.
 	</div>
 
 	<div class="article-one">
@@ -32,7 +162,7 @@
 	</div>
 
 
-
+	<!--
 	<div class="article-one">
 		<a href="https://media.darkwire.com/IMG_3074.JPG"><img src="https://media.darkwire.com/IMG_3074.JPG" alt="image-left" class="align-center" width="100%" /></a>
 		This is the custom circuit board, fully populated and ready to be installed inside the fuselage. I could have saved space by using surface mount parts but the overall footprint for the resistors wasn’t that different when mounting them vertically. The main IC is an ATTiny84.
@@ -53,6 +183,7 @@
 	<div class="article-one">
 		<p><a href="https://media.darkwire.com/IMG_2536.JPG"><img src="https://media.darkwire.com/IMG_2536.JPG" alt="image-left" class="align-center" width="100%" /></a></p>
 	</div>
+	-->
 
 </div>
 
